--- a/QuanLyKhachSan/src/com/exemple/views/ChaoJDialog.form
+++ b/QuanLyKhachSan/src/com/exemple/views/ChaoJDialog.form
@@ -114,7 +114,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="66" green="66" red="66" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="welcome to hotel"/>
+                <Property name="text" type="java.lang.String" value="Welcome To Hotel"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -130,7 +130,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="170" y="60" width="320" height="340"/>
+                  <AbsoluteConstraints x="180" y="60" width="320" height="340"/>
                 </Constraint>
               </Constraints>
             </Component>
