--- a/QuanLyKhachSan/src/com/exemple/views/DoiMatKhau.form
+++ b/QuanLyKhachSan/src/com/exemple/views/DoiMatKhau.form
@@ -148,7 +148,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="33" red="33" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="QU&#xca;N M&#x1eac;T KH&#x1ea8;U"/>
+        <Property name="text" type="java.lang.String" value="&#x110;&#x1ed4;I M&#x1eac;T KH&#x1ea8;U"/>
       </Properties>
     </Component>
   </SubComponents>
