--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyDoiTacJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyDoiTacJPanel.form
@@ -64,7 +64,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="lbl_SLHT" min="-2" pref="75" max="-2" attributes="0"/>
+                              <Component id="txt_SLHT" min="-2" pref="73" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
@@ -95,16 +95,16 @@
                   <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="txt_SDT" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txt_TenDT" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbl_SLHT" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txt_SLHT" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   </Group>
@@ -239,10 +239,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txt_SDT">
     </Component>
-    <Component class="javax.swing.JLabel" name="lbl_SLHT">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="0"/>
-      </Properties>
+    <Component class="javax.swing.JTextField" name="txt_SLHT">
     </Component>
   </SubComponents>
 </Form>
