--- a/QuanLyKhachSan/src/com/exemple/views/DoiMatKhau.form
+++ b/QuanLyKhachSan/src/com/exemple/views/DoiMatKhau.form
@@ -111,9 +111,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTendangnhap">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="T&#xea;n &#x111;&#x103;ng nh&#x1ead;p" noResource="true"/>
-      </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="T&#xea;n &#x111;&#x103;ng nh&#x1ead;p"/>
       </AccessibilityProperties>
@@ -158,25 +155,16 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtMatkhau">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u" noResource="true"/>
-      </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u"/>
       </AccessibilityProperties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtMatkhauNew">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u m&#x1edb;i" noResource="true"/>
-      </Properties>
       <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u m&#x1edb;i"/>
       </AccessibilityProperties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtXacnhanMK">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="X&#xe1;c nh&#x1ead;n m&#x1ead;t kh&#x1ea9;u" noResource="true"/>
-      </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="X&#xe1;c nh&#x1ead;n m&#x1ead;t kh&#x1ea9;u"/>
       </AccessibilityProperties>
