--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyDoiTacJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyDoiTacJPanel.form
@@ -167,6 +167,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_TenDT">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="T&#xea;n &#x111;&#x1ed1;i t&#xe1;c" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -218,11 +221,15 @@
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="name" type="java.lang.String" value="&#x110;&#xe1;nh gi&#xe1;" noResource="true"/>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextField" name="txt_MaDT">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="M&#xe3; &#x111;&#x1ed1;i t&#xe1;c" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btn_Moi">
       <Properties>
@@ -238,6 +245,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_SDT">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="S&#x1ed1; &#x111;i&#x1ec7;n tho&#x1ea1;i" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_SLHT">
     </Component>
